--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: python
 python:
   - "3.7"
-install:
-  - pip install -r requirements.txt
+services:
+  - docker
+before_install:
+  - docker build -t someshkoli/improved-winter .
 # command to run tests
-script: pytest
+script:
+  - pytest
